--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel=”stylesheet” href=”http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css“>
         <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet" />
         <link
             rel="stylesheet"
@@ -86,7 +87,7 @@
         </nav>
         <img src="img/chof1.png" width="100" class="img_chof1"/>
         <section class="section">
-            <h1 class="title">AI.루돌프 "쵸프"의 선물</h1>
+            <h1 class="title"><i class="fa-gift"></i>AI.루돌프 "쵸프"의 선물</h1>
             <h2 class="subtitle">얼굴을 보고 취향저격 선물을 추천 해드립니다!</h2>
         </section>
         <script
