--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="naver-site-verification" content="b93432a90ac2518a73fc043f008c911e03004245" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYEWS6BEFR"></script>
         <script>
@@ -15,7 +16,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel=”stylesheet” href=”http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css“>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet" />
         <link
             rel="stylesheet"
@@ -87,7 +88,7 @@
         </nav>
         <img src="img/chof1.png" width="100" class="img_chof1"/>
         <section class="section">
-            <h1 class="title"><i class="fa-gift"></i>AI.루돌프 "쵸프"의 선물</h1>
+            <h1 class="title">AI.루돌프 "쵸프"의 선물</h1>
             <h2 class="subtitle">얼굴을 보고 취향저격 선물을 추천 해드립니다!</h2>
         </section>
         <script
@@ -116,7 +117,7 @@
                     <div class="spinner-border" role="status">
                         <span class="sr-only">Loading...</span>
                     </div>
-                    <p class="text-center">AI가 얼굴을 분석중입니다.</p>
+                    <p class="text-center">AI쵸프가 얼굴을 분석중입니다.</p>
                 </div>
                 <p class="result-message"></p>
                 <div class="ins-add"></div>
