--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         />
         <title>선물 추천 AI</title>
         <meta name="title" content="선물 추천 AI" />
-        <meta name="subject" content="선물 대신 고민해드립니다!" />
+        <meta name="subject" content="취향저격 선물을 추천 해드립니다!" />
+        <meta name="description" content="얼굴로 보는 선물 추천 AI!취향저격 선물을 추천 해드립니다!" />
         <meta
             name="keywords"
-            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 선물 추천, 인공지능 선물 추천, AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, AI 얼굴 테스트"
+            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 선물 추천, 선물 추천 AI, 인공지능, AI, 인공지능 선물 추천, AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, AI 얼굴 테스트, 취향저격, 취향저격 선물"
         />
         <meta name="author" content="바코" />
         <link rel="stylesheet" href="style.css" />
@@ -45,7 +46,7 @@
         <meta property="og:title" content="선물 추천 AI" />
         <meta
             property="og:description"
-            content="선물 대신 고민해드립니다! 얼굴로 보는 선물 추천 AI!"
+            content="얼굴로 보는 선물 추천 AI!취향저격 선물을 추천 해드립니다!"
         />
         <meta property="og:image" content="https://bestgift.gq/img/bg_web.png" />
         <link rel="shortcut icon" href="img/chof.ico" type="image/x-icon" />
