--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
         <meta name="description" content="얼굴로 보는 선물 추천 AI!취향저격 선물을 추천 해드립니다!" />
         <meta
             name="keywords"
-            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 선물 추천, 선물 추천 AI, 인공지능, AI, 인공지능 선물 추천, AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, AI 얼굴 테스트, 취향저격, 취향저격 선물"
+            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 
+                     선물 추천, 선물 추천 AI, 인공지능, AI, 인공지능 선물 추천, 
+                     AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, 
+                     AI 얼굴 테스트, 취향저격, 취향저격 선물, best gift, 쵸프, AI쵸프"
         />
         <meta name="author" content="바코" />
         <link rel="stylesheet" href="style.css" />
