--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet" />
+        <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+            rel="stylesheet"
+        />
         <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet" />
         <link
             rel="stylesheet"
@@ -33,7 +36,10 @@
         <title>선물 추천 AI</title>
         <meta name="title" content="선물 추천 AI" />
         <meta name="subject" content="취향저격 선물을 추천 해드립니다!" />
-        <meta name="description" content="얼굴로 보는 선물 추천 AI!취향저격 선물을 추천 해드립니다!" />
+        <meta
+            name="description"
+            content="얼굴로 보는 선물 추천 AI, 친구에게 알맞는 취향저격 선물을 추천 해드립니다! 친구,부모님에게 어떤 선물을 줘야할지 고민하셨나요? AI 이미지 분석을 통해 얼굴의 표정, 나이, 성별를 추출하여 나온 데이터로 선물을 추천 해드립니다. 회원가입 및 설문조사 없이 이미지만 올리면 화면에서 바로 확인할 수 있습니다! 사진 데이터는 그 어디에도 저장되지 않습니다. 인공지능이 보는 취향저격 선물 추천! 한번 시도 해보세요!"
+        />
         <meta
             name="keywords"
             content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 
@@ -43,13 +49,13 @@
         />
         <meta name="author" content="바코" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="canonical" href="#" />
+        <link rel="canonical" href="https://bestgift.gq" />
         <meta property="og:url" content="https://bestgift.gq" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="선물 추천 AI" />
         <meta
             property="og:description"
-            content="얼굴로 보는 선물 추천 AI!취향저격 선물을 추천 해드립니다!"
+            content="얼굴로 보는 선물 추천 AI, 친구에게 알맞는 취향저격 선물을 추천 해드립니다! 친구,부모님에게 어떤 선물을 줘야할지 고민하셨나요? AI 이미지 분석을 통해 얼굴의 표정, 나이, 성별를 추출하여 나온 데이터로 선물을 추천 해드립니다. 회원가입 및 설문조사 없이 이미지만 올리면 화면에서 바로 확인할 수 있습니다! 사진 데이터는 그 어디에도 저장되지 않습니다. 인공지능이 보는 취향저격 선물 추천! 한번 시도 해보세요!"
         />
         <meta property="og:image" content="https://bestgift.gq/img/bg_web.png" />
         <link rel="shortcut icon" href="img/chof.ico" type="image/x-icon" />
@@ -84,16 +90,34 @@
                             <a class="nav-link active" aria-current="page" href="#">선물 추천 AI</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://goldeye15.tistory.com/">바코 홈페이지</a>
+                            <a class="nav-link" href="https://goldeye15.tistory.com/"
+                                >바코 홈페이지</a
+                            >
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <img src="img/chof1.png" width="100" class="img_chof1"/>
+        <img src="img/chof1.png" width="100" class="img_chof1" />
         <section class="section">
             <h1 class="title">AI.루돌프 "쵸프"의 선물</h1>
             <h2 class="subtitle">얼굴을 보고 취향저격 선물을 추천 해드립니다!</h2>
+            <h2 class="sr-only">
+                친구에게 어떤 선물을 해줘야할까? AI가 추천하는 취향저격 선물을 드려보세요!
+            </h2>
+            <h3 class="sr-only">
+                AI가 얼굴 데이터를 분석하여 어떤 선물이 가장 어울릴지 찾아드립니다.
+            </h3>
+            <h4 class="sr-only">
+                본 서비스는 Google의 TensorFlow를 활용한 face-api.js를 사용하였습니다.
+            </h4>
+            <p class="sr-only">
+                얼굴로 보는 선물 추천 AI, 친구에게 알맞는 취향저격 선물을 추천 해드립니다!
+                친구,부모님에게 어떤 선물을 줘야할지 고민하셨나요? AI 이미지 분석을 통해 얼굴의
+                표정, 나이, 성별를 추출하여 나온 데이터로 선물을 추천 해드립니다. 회원가입 및
+                설문조사 없이 이미지만 올리면 화면에서 바로 확인할 수 있습니다! 사진 데이터는 그
+                어디에도 저장되지 않습니다. 인공지능이 보는 취향저격 선물 추천! 한번 시도 해보세요!
+            </p>
         </section>
         <script
             class="jsbin"
@@ -157,6 +181,20 @@
                 src="//t1.daumcdn.net/kas/static/ba.min.js"
                 async
             ></script>
+        </section>
+
+        <section class="section">
+            <center>
+            <iframe
+                width="320"
+                height="180"
+                src="https://www.youtube.com/embed/s6SITKSN9Q0"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen=""
+            ></iframe>
+            <p>제작 도움: 유튜브 조코딩 채널</p>
+            </center>
         </section>
 
         <section class="section">
