--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@
         <meta name="subject" content="취향저격 선물을 추천 해드립니다!" />
         <meta
             name="description"
-            content="얼굴로 보는 선물 추천 AI, 친구에게 알맞는 취향저격 선물을 추천 해드립니다! 친구,부모님에게 어떤 선물을 줘야할지 고민하셨나요? AI 이미지 분석을 통해 얼굴의 표정, 나이, 성별를 추출하여 나온 데이터로 선물을 추천 해드립니다. 회원가입 및 설문조사 없이 이미지만 올리면 화면에서 바로 확인할 수 있습니다! 사진 데이터는 그 어디에도 저장되지 않습니다. 인공지능이 보는 취향저격 선물 추천! 한번 시도 해보세요!"
+            content="얼굴로 보는 선물 추천 AI, 취향저격 선물을 추천 해드립니다! AI분석을 통해 얼굴의 표정, 나이, 성별 데이터로 선물을 추천 해드립니다."
         />
         <meta
             name="keywords"
-            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 
-                     선물 추천, 선물 추천 AI, 인공지능, AI, 인공지능 선물 추천, 
-                     AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, 
-                     AI 얼굴 테스트, 취향저격, 취향저격 선물, best gift, 쵸프, AI쵸프"
+            content="얼굴 테스트, 인공지능 얼굴 테스트, 얼굴상, 얼굴상 테스트, 선물 추천, 선물 추천 AI, 인공지능, AI, 인공지능 선물 추천, AI 선물 추천, 얼굴 감정, 얼굴 표정, gift, bestgift, AI 얼굴 테스트, 취향저격, 취향저격 선물, best gift, 쵸프, AI쵸프"
         />
         <meta name="author" content="바코" />
         <link rel="stylesheet" href="style.css" />
@@ -55,7 +52,7 @@
         <meta property="og:title" content="선물 추천 AI" />
         <meta
             property="og:description"
-            content="얼굴로 보는 선물 추천 AI, 친구에게 알맞는 취향저격 선물을 추천 해드립니다! 친구,부모님에게 어떤 선물을 줘야할지 고민하셨나요? AI 이미지 분석을 통해 얼굴의 표정, 나이, 성별를 추출하여 나온 데이터로 선물을 추천 해드립니다. 회원가입 및 설문조사 없이 이미지만 올리면 화면에서 바로 확인할 수 있습니다! 사진 데이터는 그 어디에도 저장되지 않습니다. 인공지능이 보는 취향저격 선물 추천! 한번 시도 해보세요!"
+            content="얼굴로 보는 선물 추천 AI, 취향저격 선물을 추천 해드립니다! AI분석을 통해 얼굴의 표정, 나이, 성별 데이터로 선물을 추천 해드립니다."
         />
         <meta property="og:image" content="https://bestgift.gq/img/bg_web.png" />
         <link rel="shortcut icon" href="img/chof.ico" type="image/x-icon" />
